M1/S7/TL/TP1/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | opt_statements statement

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression

  11  cell : LBRACKET INT COMMA INT RBRACKET

  12  operand : cell
  13          | INT
  14          | ID
  15          | LPAR expression RPAR
  16          | SUB operand
  17          | ADD operand

  18  expressionPrio1 : operand
  19                  | expressionPrio1 MUL operand
  20                  | expressionPrio1 DIV operand
  21                  | expressionPrio1 MOD operand

  22  expression : expressionPrio1
  23             | expression ADD expressionPrio1
  24             | expression SUB expressionPrio1

  25  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (25)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (25)

	.  reduce 25


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 18


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 19


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 20
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)
	opt_statements : opt_statements . statement  (8)

	EOF  shift 21
	LBRACKET  shift 22
	ID  shift 23
	.  error

	statement  goto 24
	cell  goto 25


state 19
	fields : fields COMMA field .  (5)

	.  reduce 5


state 20
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 26
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 22
	cell : LBRACKET . INT COMMA INT RBRACKET  (11)

	INT  shift 27
	.  error


state 23
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 28
	.  error


state 24
	opt_statements : opt_statements statement .  (8)

	.  reduce 8


state 25
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 29
	.  error


state 26
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 27
	cell : LBRACKET INT . COMMA INT RBRACKET  (11)

	COMMA  shift 30
	.  error


state 28
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	expression  goto 37
	operand  goto 38
	expressionPrio1  goto 39


state 29
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	expression  goto 40
	operand  goto 38
	expressionPrio1  goto 39


state 30
	cell : LBRACKET INT COMMA . INT RBRACKET  (11)

	INT  shift 41
	.  error


state 31
	operand : LPAR . expression RPAR  (15)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	expression  goto 42
	operand  goto 38
	expressionPrio1  goto 39


state 32
	operand : ADD . operand  (17)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 43


state 33
	operand : SUB . operand  (16)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 44


state 34
	operand : ID .  (14)

	.  reduce 14


state 35
	operand : INT .  (13)

	.  reduce 13


state 36
	operand : cell .  (12)

	.  reduce 12


state 37
	statement : ID ASSIGN expression .  (10)
	expression : expression . ADD expressionPrio1  (23)
	expression : expression . SUB expressionPrio1  (24)

	ADD  shift 45
	SUB  shift 46
	EOF  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10


state 38
	expressionPrio1 : operand .  (18)

	.  reduce 18


state 39
	expressionPrio1 : expressionPrio1 . MUL operand  (19)
	expressionPrio1 : expressionPrio1 . DIV operand  (20)
	expressionPrio1 : expressionPrio1 . MOD operand  (21)
	expression : expressionPrio1 .  (22)

	MUL  shift 47
	DIV  shift 48
	MOD  shift 49
	EOF  reduce 22
	LBRACKET  reduce 22
	RPAR  reduce 22
	ADD  reduce 22
	SUB  reduce 22
	ID  reduce 22


state 40
	statement : cell ASSIGN expression .  (9)
	expression : expression . ADD expressionPrio1  (23)
	expression : expression . SUB expressionPrio1  (24)

	ADD  shift 45
	SUB  shift 46
	EOF  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9


state 41
	cell : LBRACKET INT COMMA INT . RBRACKET  (11)

	RBRACKET  shift 50
	.  error


state 42
	operand : LPAR expression . RPAR  (15)
	expression : expression . ADD expressionPrio1  (23)
	expression : expression . SUB expressionPrio1  (24)

	RPAR  shift 51
	ADD  shift 45
	SUB  shift 46
	.  error


state 43
	operand : ADD operand .  (17)

	.  reduce 17


state 44
	operand : SUB operand .  (16)

	.  reduce 16


state 45
	expression : expression ADD . expressionPrio1  (23)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 38
	expressionPrio1  goto 52


state 46
	expression : expression SUB . expressionPrio1  (24)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 38
	expressionPrio1  goto 53


state 47
	expressionPrio1 : expressionPrio1 MUL . operand  (19)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 54


state 48
	expressionPrio1 : expressionPrio1 DIV . operand  (20)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 55


state 49
	expressionPrio1 : expressionPrio1 MOD . operand  (21)

	LBRACKET  shift 22
	LPAR  shift 31
	ADD  shift 32
	SUB  shift 33
	ID  shift 34
	INT  shift 35
	.  error

	cell  goto 36
	operand  goto 56


state 50
	cell : LBRACKET INT COMMA INT RBRACKET .  (11)

	.  reduce 11


state 51
	operand : LPAR expression RPAR .  (15)

	.  reduce 15


state 52
	expressionPrio1 : expressionPrio1 . MUL operand  (19)
	expressionPrio1 : expressionPrio1 . DIV operand  (20)
	expressionPrio1 : expressionPrio1 . MOD operand  (21)
	expression : expression ADD expressionPrio1 .  (23)

	MUL  shift 47
	DIV  shift 48
	MOD  shift 49
	EOF  reduce 23
	LBRACKET  reduce 23
	RPAR  reduce 23
	ADD  reduce 23
	SUB  reduce 23
	ID  reduce 23


state 53
	expressionPrio1 : expressionPrio1 . MUL operand  (19)
	expressionPrio1 : expressionPrio1 . DIV operand  (20)
	expressionPrio1 : expressionPrio1 . MOD operand  (21)
	expression : expression SUB expressionPrio1 .  (24)

	MUL  shift 47
	DIV  shift 48
	MOD  shift 49
	EOF  reduce 24
	LBRACKET  reduce 24
	RPAR  reduce 24
	ADD  reduce 24
	SUB  reduce 24
	ID  reduce 24


state 54
	expressionPrio1 : expressionPrio1 MUL operand .  (19)

	.  reduce 19


state 55
	expressionPrio1 : expressionPrio1 DIV operand .  (20)

	.  reduce 20


state 56
	expressionPrio1 : expressionPrio1 MOD operand .  (21)

	.  reduce 21


22 terminals, 12 nonterminals
26 grammar rules, 57 states
